[gd_scene load_steps=15 format=3 uid="uid://bdogxe3m1dhw2"]

[ext_resource type="Script" uid="uid://bkpn724tg17tm" path="res://Scripts/Screens/StatsScreen.gd" id="1_57a8p"]
[ext_resource type="FontFile" uid="uid://ccmyvp70fd5pe" path="res://Assets/Fonts/LuckiestGuy.ttf" id="2_5d5ab"]
[ext_resource type="PackedScene" uid="uid://dvxu5lskx6m10" path="res://Scenes/Components/UI/panel_container.tscn" id="2_djtya"]
[ext_resource type="Texture2D" uid="uid://c45ug4yw5vyjd" path="res://Assets/Images/arte1.jpg" id="3_2j4m2"]
[ext_resource type="PackedScene" uid="uid://bdvvvhltoedcq" path="res://Scenes/Components/BackButton/BackButton.tscn" id="5_3mdl3"]
[ext_resource type="Texture2D" uid="uid://cixaoueymw0bn" path="res://Assets/Images/GUID/tile_tikitiki_puzzle.png" id="5_y61kq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhr3j"]
bg_color = Color(0.219608, 0.4, 0.498039, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_djtya"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y61kq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aer1c"]
texture = ExtResource("5_y61kq")
region_rect = Rect2(2105, 151, 105, 88)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7ecnk"]
texture = ExtResource("5_y61kq")
region_rect = Rect2(2230, 151, 105, 88)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7wc4q"]
texture = ExtResource("5_y61kq")
region_rect = Rect2(2355, 151, 105, 88)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vtt34"]
texture = ExtResource("5_y61kq")
region_rect = Rect2(2105, 151, 105, 88)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1w1yt"]
texture = ExtResource("5_y61kq")
region_rect = Rect2(2105, 151, 105, 88)

[node name="StatsScreen" type="Node2D"]
script = ExtResource("1_57a8p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.72549, 0.854902, 1, 1)

[node name="MainContainer" parent="CanvasLayer" instance=ExtResource("2_djtya")]
custom_minimum_size = Vector2(700, 0)
offset_left = -315.0
offset_top = -595.0
offset_right = 385.0
offset_bottom = 600.0
scale = Vector2(0.88, 1)

[node name="Panel2" type="Panel" parent="CanvasLayer/MainContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uhr3j")

[node name="ContentContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="CanvasLayer/MainContainer/ContentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5d5ab")
theme_override_font_sizes/font_size = 32
text = "ESTADÍSTICAS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Selectors" type="VBoxContainer" parent="CanvasLayer/MainContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PackSelector" type="HBoxContainer" parent="CanvasLayer/MainContainer/ContentContainer/Selectors"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 10

[node name="PackLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/Selectors/PackSelector"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Pack:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PackDropdown" type="OptionButton" parent="CanvasLayer/MainContainer/ContentContainer/Selectors/PackSelector"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_5d5ab")
theme_override_font_sizes/font_size = 20

[node name="PuzzleSelector" type="HBoxContainer" parent="CanvasLayer/MainContainer/ContentContainer/Selectors"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 10

[node name="PuzzleLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/Selectors/PuzzleSelector"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Puzzle:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PuzzleDropdown" type="OptionButton" parent="CanvasLayer/MainContainer/ContentContainer/Selectors/PuzzleSelector"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_5d5ab")
theme_override_font_sizes/font_size = 20

[node name="DifficultySelector" type="HBoxContainer" parent="CanvasLayer/MainContainer/ContentContainer/Selectors"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 10

[node name="DifficultyLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/Selectors/DifficultySelector"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Dificultad:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DifficultyDropdown" type="OptionButton" parent="CanvasLayer/MainContainer/ContentContainer/Selectors/DifficultySelector"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_5d5ab")
theme_override_font_sizes/font_size = 20

[node name="ContentHBox" type="VBoxContainer" parent="CanvasLayer/MainContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="StatsPanel" type="PanelContainer" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_djtya")

[node name="StatsContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox/StatsPanel"]
layout_mode = 2
alignment = 1

[node name="GeneralStatsLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox/StatsPanel/StatsContainer"]
layout_mode = 2
text = "ESTADÍSTICAS GENERALES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CompletionsLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox/StatsPanel/StatsContainer"]
layout_mode = 2
text = "Veces completado: 0"
vertical_alignment = 1

[node name="BestTimeLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox/StatsPanel/StatsContainer"]
layout_mode = 2
text = "Mejor tiempo: 00:00"
vertical_alignment = 1

[node name="BestTimeDateLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox/StatsPanel/StatsContainer"]
layout_mode = 2
text = "Conseguido el: -"
vertical_alignment = 1

[node name="BestMovesLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox/StatsPanel/StatsContainer"]
layout_mode = 2
text = "Mejor movimientos: 0"
vertical_alignment = 1

[node name="BestMovesDateLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox/StatsPanel/StatsContainer"]
layout_mode = 2
text = "Conseguido el: -"
vertical_alignment = 1

[node name="NoRecordsLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox/StatsPanel/StatsContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_5d5ab")
theme_override_font_sizes/font_size = 16
text = "No hay récords registrados"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoStatsLabel" type="Label" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox/StatsPanel/StatsContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_5d5ab")
theme_override_font_sizes/font_size = 16
text = "Selecciona un pack, un puzzle y una dificultad para ver sus estadísticas"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PuzzleImagePanel" type="PanelContainer" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox"]
clip_contents = true
custom_minimum_size = Vector2(360, 450)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_y61kq")

[node name="PuzzleImage" type="TextureRect" parent="CanvasLayer/MainContainer/ContentContainer/ContentHBox/PuzzleImagePanel"]
layout_mode = 2
texture = ExtResource("3_2j4m2")
expand_mode = 1
stretch_mode = 5

[node name="MainContainer3" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 17.5
offset_right = -20.0
offset_bottom = -57.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="BackButton2" parent="CanvasLayer" instance=ExtResource("5_3mdl3")]
offset_left = 50.0
offset_right = 170.0
path = "res://Scenes/MainMenu.tscn"

[node name="BackButton" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 49.0
offset_top = -166.0
offset_right = 169.0
offset_bottom = -46.0
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxTexture_aer1c")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_7ecnk")
theme_override_styles/hover = SubResource("StyleBoxTexture_7wc4q")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vtt34")
theme_override_styles/normal = SubResource("StyleBoxTexture_1w1yt")

[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_back_button_pressed"]
